fixup! [fetch] Replace metadata tests for CSS @font-face

--- a/fetch/metadata/redirect/multiple-redirect-https-downgrade-upgrade.sub.html
+++ b/fetch/metadata/redirect/multiple-redirect-https-downgrade-upgrade.sub.html
@@ -8,7 +8,7 @@
 <script src=/common/utils.js></script>
 <body>
 <script>
-  let nonce = "{{$id}}";
+  let nonce = token();
   let expected = {"site": "cross-site", "user": "", "mode": "cors", "dest": "font"};
 
   // Validate various scenarios handle a request that redirects from https => http => https
